  dimension.  Unsigned int vector of size 3, when available.  Otherwise, void.

$_kernel_instance_id
  An architecture-specific kernel instance identifier for the kernel processed
  by the thread.  The identifier is unique per kernel submission.  The term
  `kernel` refers to a function that is submitted to and runs on an appropriate
  device, e.g. a GPU device.

* New commands

maint jit dump
  Dump an in-memory JIT object into a file.

info devices
  Show additional information about inferiors which are considered
  devices by GDB.  For devices, the description displayed by 'info
  inferiors' has been changed.  The new description displays them as a
  'device' together with their PCI slot and sub-device ID.  This allows
  one to uniquely identify devices in 'info inferiors' with devices
  displayed in 'info devices'.

set print shadowed on|off
show print shadowed
  This controls the output of the "info locals" command for C/C++/Fortran.  If
  the option is 'off' shadowed variables will be omitted in output.  The
  default is to print shadowed variables.

* Changed commands

info threads [-gid] [-stopped] [ID]...
  This command now takes an optional flag, '-stopped', that causes only
  the stopped threads to be printed.  The flag can be useful to get a
  reduced list when there is a large number of unstopped threads.

thread apply thread-list|all|all-lanes -unavailable
  Command now defaults to applying only to available threads.  To
  restore previous behaviour of applying also to unavailable
  threads the option "-unavailable" is added.

* Add convenience variable `$_simd_lane`.

* Python API

  ** Added gdb.record.clear(). Clears the trace data of the current recording.
     This forces re-decoding of the trace for successive commands.

* MI changes

  ** New option in '-thread-info': '--lid'; and new field: 'local-ids'

     If the option is present, then the new field 'local-ids' is included